<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toTopOf="@+id/guide40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/digicolle_logo" />

    <android.support.constraint.Guideline
        android:id="@+id/guide40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/txtLoginText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/create_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/guide85"
        app:layout_constraintStart_toStartOf="@+id/guide15"
        app:layout_constraintTop_toTopOf="@+id/guide40" />

    <android.support.constraint.Guideline
        android:id="@+id/guide15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guide85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtUsername"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guide85"
        app:layout_constraintStart_toStartOf="@+id/guide15"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPassword"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guide85"
        app:layout_constraintStart_toStartOf="@+id/guide15"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_button"
        app:layout_constraintEnd_toStartOf="@+id/guide85"
        app:layout_constraintStart_toStartOf="@+id/guide15"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

</android.support.constraint.ConstraintLayout>